heading, paragraphs, lorem ipsum, bold, italics, line breaks, horizontal rule

--- a/04_typography.html
+++ b/04_typography.html
@@ -7,6 +7,23 @@
   <title>Headings, Paragraphs, Typography</title>
 </head>
 <body>
-  
+  <!-- Headings -->
+  <h1>Heading 1</h1>
+  <h2>Heading 2</h2>
+  <h3>Heading 3</h3>
+  <h4>Heading 4</h4>
+  <h5>Heading 5</h5>
+  <h6>Heading 6</h6>
+
+  <!-- Paragraph -->
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed similique sint quidem quisquam aut ut modi voluptate dolor. Cum aspernatur similique fugit natus sunt, optio odit in. Eaque adipisci ullam officiis amet culpa incidunt itaque explicabo eos, nihil necessitatibus quisquam <strong>tempore ad reiciendis voluptatem odit consequuntur corrupti quae fugit aut nisi eius modi veniam. Ipsum, vero suscipit. 
+
+  <!-- Line breaks  -->
+    <br>
+    <br>
+    Consequuntur <del>molestias voluptatum cum cupiditate a</del> </strong>, fuga maxime. Eveniet rem labore alias voluptatum error vero ad blanditiis nostrum doloremque repellendus debitis, <em>ipsam saepe odit, cupiditate iure laborum qui. Ad exercitationem obcaecati quo neque</em> 
+    <!-- Horizontal Rule -->
+    <hr>
+    minus inventore? Sit incidunt mollitia eius facilis aliquam. Rem, placeat.</p>
 </body>
 </html>
