--- a/06_lists_tables.html
+++ b/06_lists_tables.html
@@ -36,7 +36,8 @@
     </ul>
 
     <h3>Tables</h3>
-    <table>
+    <!-- inline styling not a good practice. Use CSS to style elements -->
+    <table style="width: 600px">
       <thead>
         <tr>
           <th>
